nvmecontrol can fetch aws device name and volume id
A "device name" can be provided when AWS volumes are created.  On
newer instance that use NVMe disks, these names are ignored; names
like `/dev/nvmeX` are used instead and/but the actual device index
used is undefined (the order in which the volumes are attached is
undefined *and* may change between reboots).

The standard approach ([details here][ebsnvme-docs]) to bring
determinism to this process leverages the fact that AWS stores the
requested device name in the NVMe device's vendor extension space.
Amazon Linux provides a tool, ebsnvme-id, that fetches this
information.  It is also available in a raw form via the Linux `nvme
id-ctrl` command on sufficiently modern Linux distributions.

This commit extends the nvmecontrol application, adding an `aws`
sub-command that mimics the behavior of the `ebsnvme-id` tool.  E.g.

```
[root@freebsd /usr/src/sbin/nvmecontrol]# nvmecontrol aws nvme0
sda1
Volume ID: vol-0e711edd317b8a600
[root@freebsd /usr/src/sbin/nvmecontrol]#
```

[ebsnvme-docs]: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/nvme-ebs-volumes.html

--- a/sbin/nvmecontrol/nvmecontrol.8
+++ b/sbin/nvmecontrol/nvmecontrol.8
@@ -101,6 +101,11 @@
 .Ic wdc get-crash-dump
 .Op Fl o path_template
 .Aq device id
+.Nm
+.Ic aws
+.Op Fl d
+.Op Fl v
+.Aq device
 .\" .Nm
 .\" .Ic wdc purge
 .\" .Aq device id
@@ -160,6 +165,12 @@ the drive's serial number and the type of dump it is followed
 by .bin.
 These logs must be sent to the vendor for analysis.
 This tool only provides a way to extract them.
+.Ss aws
+The aws command retrieves the device name that was specified when the
+volume was created, the AWS volume id, or both.  For compatibility
+with the Amazon Linux ebsnvme-id script, if the device name has a
+"/dev/" prefix, it is removed.  Likewise, if the volume id does not
+include a "-" between the "vol" and the ID, one is inserted.
 .Sh EXAMPLES
 .Dl nvmecontrol devlist
 .Pp
@@ -230,6 +241,20 @@ Set the current power mode.
 .Dl nvmecontrol power nvme0
 .Pp
 Get the current power mode.
+.Pp
+.Dl nvmecontrol aws nvme1
+.Pp
+Get both the device name and the AWS volume id.
+.Pp
+.Dl nvmecontrol aws -d nvme1
+.Pp
+Get the device name that was specified when the AWS volume was created
+(e.g. "/dev/sdh").
+.Pp
+.Dl nvmecontrol aws -v nvme1
+.Pp
+Get the volume id of the AWS volume (e.g. "Volume ID:
+vol-0320fb82a1f2610ec").
 .Sh HISTORY
 The
 .Nm
